cmake_minimum_required(VERSION 2.8 FATAL_ERROR)

project(ch10_1)


#SET(CMAKE_CXX_COMPILER "g++")
#SET( CMAKE_BUILD_TYPE Debug  )

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/build)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)
LINK_DIRECTORIES( ${PROJECT_SOURCE_DIR}/lib)

ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/src)


